tests/baselines/reference/parserMemberAccessorDeclaration7(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration7.ts(2,12): error TS1028: Accessibility modifier already seen.
parserMemberAccessorDeclaration7.ts(2,23): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration7.ts (2 errors) ====
    class C {
        public public get Foo() { }
               ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }